# oracle-ai-developer-hub

./: .gitignore  README.md
apps/rag-to-memory-systems-demo/: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
apps/rag-to-memory-systems-demo/data/: seed.py
apps/rag-to-memory-systems-demo/memory/: agent_session.py  db.py  ddl.py  embeddings.py  extraction.py  hashing.py  manager.py  model.py  onnx_loader.py  promotion.py  records.py  retrieval.py  schemas.sql  startup.py
apps/rag-to-memory-systems-demo/notebooks/: memory_loop_deep_dive.ipynb
apps/rag-to-memory-systems-demo/tests/: conftest.py  test_agent_session.py  test_cascade_erase.py  test_ddl.py  test_embeddings.py  test_extraction.py  test_handle_turn.py  test_hashing.py  test_model.py  test_promotion_gate.py  test_prompt_preamble.py  test_records.py  test_relevance_filter.py  test_retrieval.py  test_retrieval_fallback.py  test_store_episodic.py  test_store_fact.py  test_store_trace.py  test_stores_policy_preference.py  test_supersession.py
workshops/soccer-analytics-agent/: .env.example  .gitignore  README.md  enhanced_features.py  pyproject.toml
workshops/soccer-analytics-agent/docker/: PODMAN.md  README.md  TROUBLESHOOTING.md  docker-compose.yml
workshops/soccer-analytics-agent/docs/: ARCHITECTURE.md  ML_FEATURE_PIPELINE.md
workshops/soccer-analytics-agent/frontend/: index.html  package-lock.json  package.json  vite.config.ts
workshops/soccer-analytics-agent/models/: best_model.pkl  predictions.parquet
workshops/soccer-analytics-agent/notebooks/: world_cup_advanced_ml.ipynb  world_cup_enhanced.ipynb  world_cup_ml_tutorial.ipynb
workshops/soccer-analytics-agent/scripts/: embed_match_facts.py  generate_ml_pipeline_drawio.py  init_memory.py  load_langchain_vectors.py  load_onnx_model.py  load_predictions.py  prepare_artifacts.py  setup_db.py  showcase_match_briefing.py  showcase_oracle_agent_memory.py  smoke_test.py  verify.py
workshops/soccer-analytics-agent/soccer_agent/: __init__.py  db.py
workshops/soccer-analytics-agent/test_retrain/: train_real_model.py
workshops/soccer-analytics-agent/tests/: MANUAL_UI_TEST.md  conftest.py  test_agent_loop.py  test_api.py  test_bulk_inference.py  test_cli_chat.py  test_db.py  test_embeddings.py  test_enhanced_features.py  test_episodic_memory.py  test_feature_runtime.py  test_grok_client.py  test_grok_live.py  test_langchain_hybrid.py  test_langgraph_observability.py  test_live_inference.py  test_memory_schema.py  test_onnx_embedding.py  test_semantic_memory.py  test_setup_db.py  (+2 more)
(+69 files in other folders)
