[project]
name = "oracle-memory-system-demo"
version = "0.1.0"
description = "CLI chat + notebook demonstrating typed agent memory on Oracle AI Database"
requires-python = ">=3.11,<3.13"
license = "UPL-1.0"
dependencies = [
    "nbformat>=5.10.4",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.1",
    "python-dotenv>=1.2.2",
    "oracledb>=4.0.0",
    "openai>=1.40.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
]

[tool.rye]
dev-dependencies = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools.packages.find]
include = ["memory*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["memory", "data"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "integration: full-stack test requiring Oracle DB or a live model API",
    "requires_oracle: test needs a reachable Oracle DB",
    "requires_openai: test needs an OPENAI_API_KEY",
]
