[project]
name = "soccer-agent"
version = "0.1.0"
description = "Soccer analytics agent workshop — Oracle AI Database + Grok 4 via OCI GenAI"
requires-python = ">=3.12"
dependencies = [
    "oracledb>=3.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "scipy>=1.13.0",
    "joblib>=1.4.0",
    "pyarrow>=24.0.0",
    "langchain-oracledb>=1.4.0",
    "oracleagentmemory>=26.4.0",
    "langgraph-oracledb>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "respx>=0.21.1",
    "optimum[onnxruntime]>=2.1.0",
    "onnx>=1.21.0",
    "transformers>=4.45,<4.58",
    "onnx2oracle>=0.1.1",
]
notebooks = [
    "jupyter",
    "matplotlib",
    "seaborn",
    "lightgbm",
    "catboost",
    "optuna",
    "shap",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["soccer_agent"]

[tool.pytest.ini_options]
markers = [
    "integration: requires a live Oracle container and (sometimes) OCI access",
]
